# MedRAG_vdb

./: .gitignore  README.md  main.py  pyproject.toml
config/: rag_config.yaml
notebooks/: evaluation.ipynb  small_test.ipynb  small_test_only_medgemma.ipynb  test_app.ipynb  test_colpali.ipynb  test_medgemma.ipynb
src/medrag_colpali.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag/: app.py  config.py  rag.py
src/rag/embedders/: bert_manager.py  colpali_manager.py
src/rag/knowledge_graph/: knowledge_graph_manager.py
src/rag/re_ranker/: re_ranker_manager.py
src/rag/utils/: pdf_manager.py  utils.py
src/rag/vectordb/: middleware.py  qdrant_manager.py
tests/: test_pdf_manager.ipynb
