[project]
name = "medrag-colpali"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colpali-engine>=0.3.10",
    "datasets>=3.6.0",
    "huggingface-hub[hf-transfer]>=0.33.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "qdrant-client>=1.14.3",
    "rich>=14.0.0",
    "stamina>=25.1.0",
    "transformers>=4.51.3",
]
