[project]
name = "medrag-colpali"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colpali-engine>=0.3.10",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "gradio>=4.44.1",
    "huggingface-hub[hf-transfer]>=0.33.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.14.3",
    "rich>=14.0.0",
    "spaces>=0.37.1",
    "stamina>=25.1.0",
    "transformers>=4.51.3",
]
